# cli-llm

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
examples/: __init__.py  collect.py  correct.py  improve.py  poetry.py  readme.py  summarise.py
src/cli_llm/: __init__.py  _cli_utils.py  _logging.py  _template.py.jinja  cli.py  config.py  errors.py  helpers.py  logging.py  new.py  response.py  run.py  types.py
tests/: conftest.py  example.py  test_cli.py  test_cli_utils.py  test_config.py  test_examples.py  test_helpers.py  test_new.py  test_response.py  test_run.py
