[project]
name = "cli-llm"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "jinja2>=3.1.4",
    "llm-ollama>=0.5.0",
    "llm>=0.16",
    "platformdirs>=4.3.6",
    "pydantic-settings>=2.5.2",
    "rich>=13.8.1",
]
license = "MIT"
authors = [{ name = "Benjamin Askew-Gale" }]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typing" },
]
lint = ["ruff>=0.6.8"]
test = [
    "pytest>=8.3.3",
    "pytest-randomly>=3.15.0",
    "pytest-cov>=5.0.0",
    "pytest-grabbag[all]",
    "logot>=1.3.0",
]
typing = ["mypy>=1.11.2"]
typing-test = [{ include-group = "test" }, { include-group = "typing" }]

[project.scripts]
clm = "cli_llm.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.uv]
resolution = "lowest-direct"

[tool.uv.sources]
pytest-grabbag = { git = "https://github.com/BenGale93/pytest_grabbag" }

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "ISC001", "ANN401"]

[tool.ruff.lint.per-file-ignores]
# Ignore all directories named `tests`.
"tests/**" = ["D", "S", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
exclude = "build"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_grabbag.*"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
strict = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_subclassing_any = false

[tool.coverage.report]
exclude_also = [
    "if t.TYPE_CHECKING",
    "@t.overload",
    "@abstractmethod",
    "if TYPE_CHECKING",
]
fail_under = 100
show_missing = true

[tool.coverage.run]
branch = true

[tool.pytest.ini_options]
addopts = "--cov=src/ --cov-append"
filterwarnings = [
    "ignore::DeprecationWarning::",            # ignore deprecations from all modules
    "default::DeprecationWarning:mymodule.*:", # except from mymodule
]

[tool.cli-llm]
tools_dir = "examples"
